030-software/fluxcd/apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
  annotations:
    secret.reloader.stakater.com/reload: sonarr
    configmap.reloader.stakater.com/reload: config
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
        fsGroupChangePolicy: OnRootMismatch
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: sonarr
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: sonarr
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.20
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          resources:
            limits:
              memory: 2048Mi
            requests:
              memory: 256Mi
              cpu: 100m
          volumeMounts:
            - name: tmp
              mountPath: /config
            - name: tvshows
              mountPath: /mnt/tvshows
            - name: downloads
              mountPath: /mnt/downloads
      volumes:
        - name: tmp
          emptyDir: {}
        - name: tvshows
          nfs:
            server: genji.home.arpa
            path: /tvshows
        - name: downloads
          nfs:
            server: 10.102.22.211
            path: /
