030-software/fluxcd/apps/sonarr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  hostnames:
  - sonarr.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: sonarr
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
